# homework_OOP_14_1

./: .coverage  14.2_main.py  README.md  pyproject.toml
src/: category.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
