[tool.poetry]
name = "homework-oop-14-1"
version = "0.1.0"
description = ""
authors = ["Buzin Dmitriy <89111703879@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_oop_14"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
